Make it possible to do runClient/runServer more than once in a row.

--- a/build.gradle
+++ b/build.gradle
@@ -108,8 +108,10 @@ mixin {
 
 runClient {
     args = ['--tweakClass', 'org.spongepowered.asm.launch.MixinTweaker']
+    outputs.upToDateWhen { false }
 }
 
 runServer {
     args = ['--tweakClass', 'org.spongepowered.asm.launch.MixinTweaker']
+    outputs.upToDateWhen { false }
 }
