--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ buildscript {
 allprojects {
     apply plugin: 'net.minecraftforge.gradle.forge'
     version = "1.1"
-    group = "pw.kitl.oldboosters"
 
     repositories {
         maven {
@@ -89,9 +88,13 @@ project(":oldboosters_config") {
         compile(project(":"))
     }
 
+    group = "pw.kitl.oldboosters.config"
+
     runClient.enabled = false
     runServer.enabled = false
 }
+
+group = "pw.kitl.oldboosters"
 
 ext.getContainedDeps = { ->
     configurations.contained.files.collect {it.getName()}.join(' ')
