--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,94 @@
 plugins {
-	id 'fabric-loom' version '0.2.0-SNAPSHOT'
+	id 'fabric-loom' version '0.2.3-SNAPSHOT'
+	id 'maven-publish'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-archivesBaseName = "oldboosters"
-version = "1.0.0"
+archivesBaseName = project.archives_base_name
+version = project.mod_version
+group = project.maven_group
 
 minecraft {
 }
 
-dependencies {
-	minecraft "com.mojang:minecraft:18w50a"
-	mappings "net.fabricmc:yarn:18w50a.64"
-	modCompile "net.fabricmc:fabric-loader:0.3.0.74"
+repositories {
+    mavenCentral()
+    jcenter()
+    maven { url = "http://maven.fabricmc.net" }
+    maven { url = "https://minecraft.curseforge.com/api/maven" }
+    maven { url = "https://maven.fabricmc.net/io/github/prospector/modmenu/ModMenu/" }
+	maven { url = 'http://maven.sargunv.s3-website-us-west-2.amazonaws.com/' }
+}
 
+dependencies {
+	//to change the versions see the gradle.properties file
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	modCompile "cloth-config:ClothConfig:${project.cloth_config_version}"
+	modCompile "me.sargunvohra.mcmods:auto-config:${project.auto_config_version}"
+	modCompile "io.github.prospector.modmenu:ModMenu:${project.mod_menu_version}"
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	//modCompile "net.fabricmc:fabric:0.1.2.63"
+	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	include "cloth-config:ClothConfig:${project.cloth_config_version}"
+	include "me.sargunvohra.mcmods:auto-config:${project.auto_config_version}"
+
+	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
+	// You may need to force-disable transitiveness on them.
+}
+
+processResources {
+	inputs.property "version", project.version
+
+	from(sourceSets.main.resources.srcDirs) {
+		include "fabric.mod.json"
+		expand "version": project.version
+	}
+
+	from(sourceSets.main.resources.srcDirs) {
+		exclude "fabric.mod.json"
+	}
+}
+
+// ensure that the encoding is set to UTF-8, no matter what the system default is
+// this fixes some edge cases with special characters not displaying correctly
+// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+tasks.withType(JavaCompile) {
+	options.encoding = "UTF-8"
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = 'sources'
+	classifier = "sources"
 	from sourceSets.main.allSource
+}
+
+jar {
+	from "LICENSE"
+}
+
+// configure the maven publication
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			// add all the jars that should be included when publishing to maven
+			artifact(jar) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+		}
+	}
+
+	// select the repositories you want to publish to
+	repositories {
+		// uncomment to publish to the local maven
+		// mavenLocal()
+	}
 }
