--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,20 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
+
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.14.3
+	yarn_mappings=1.14.3+build.1
+	loader_version=0.4.8+build.155
+	cloth_config_version=0.2.4.17
+	auto_config_version=1.1.2+mc1.14.1
+	mod_menu_version=1.5.4-85
+
+# Mod Properties
+	mod_version = 1.1.0
+	maven_group = pw.kitl
+	archives_base_name = oldboosters
+
+# Dependencies
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
+	fabric_version=0.3.0+build.197
